--- a/src/sections/services/services.css
+++ b/src/sections/services/services.css
@@ -37,10 +37,6 @@
   width: 345px;
 }
 
-.service__img {
-  border-radius: 15px 15px 0 0;
-}
-
 .service__title {
   font-family: Georgia;
   font-size: 24px;
@@ -102,7 +98,7 @@ div .service__btn {
   .services__subheader {
     font-size: 1.25rem;
     line-height: 1.5rem;
-    margin: 1rem 0;
+    margin: 1rem 1rem;
   }
 
   .service__title {
