--- a/src/sections/services/services.css
+++ b/src/sections/services/services.css
@@ -7,14 +7,6 @@
   color: #020502;
 }
 
-.service__img {
-  margin-left: 5%;
-  margin-right: 5%;
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
 .services__subheader {
   font-family: Georgia;
   font-size: 28px;
@@ -30,7 +22,7 @@
 }
 
 .service__btn {
-  margin: 22px 5% 10px;
+  margin: 22px 0 10px 0;
   max-width: 100%;
   height: auto;
   display: block;
@@ -57,7 +49,7 @@
   color: #43a047;
 }
 
-.service__content {
+.servic__content {
   font-family: Georgia;
   font-size: 20px;
   font-weight: 400;
