--- a/src/sections/footer/footer.css
+++ b/src/sections/footer/footer.css
@@ -145,8 +145,8 @@ ul {
   }
 
   .footer_firstContent_writeUp,
-  .footer_secondContent1 h3,
-  .footer_secondContent1 ul li,
+  .footer_secondContent h3,
+  .footer_secondContent ul li,
   .footer_thirdContent1 p {
     font-size: 14px;
   }
