--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -50,8 +50,7 @@
 }
 
 .tractor_carrots_img {
-  margin-left: 5%;
-  margin-right: 5%;
+  margin: 0 5%;
   max-width: 100%;
   height: auto;
   display: block;
@@ -61,7 +60,7 @@
 @media (max-width: 1104px) {
   .about__child {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
   }
@@ -70,7 +69,7 @@
 @media (max-width: 768px) {
   .space__horizontalA {
     display: flex;
-    flex-direction: column;
+
     justify-content: space-evenly;
     align-items: center;
   }
