--- a/src/sections/sidebar/sidebar.css
+++ b/src/sections/sidebar/sidebar.css
@@ -27,9 +27,11 @@ ul {
   color: white;
   background-color: #163518;
   border-style: none;
-  margin-top: 50px;
 }
 
+.addulbottom {
+  margin-bottom: 50px;
+}
 .bigger_textSide {
   font-family: Georgia;
   font-size: 24px;
