--- a/src/sections/footer/footer.css
+++ b/src/sections/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #163518;
   display: flex;
-  gap: 112px;
+  gap: 10vw;
   align-items: flex-start;
   min-height: 380px;
   padding: 50px 84px;
@@ -14,7 +14,6 @@ ul {
 .footer_firstContent {
   display: flex;
   flex-direction: column;
-  width: 25vw;
 }
 
 .footer_firstContent_writeUp {
@@ -33,12 +32,14 @@ ul {
   align-items: center;
 }
 
+.footerSecondContentParent {
+  display: flex;
+  gap: 10vw;
+}
+
 .footer_secondContent {
   display: flex;
-  /* gap: 10px; */
   flex-direction: column;
-  /* justify-content: space-evenly; */
-  width: 40vw;
 }
 
 .footer_secondContent h3 {
@@ -67,7 +68,6 @@ ul {
 }
 
 .footer_thirdContent {
-  width: 25vw;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -119,6 +119,12 @@ ul {
   .footer_thirdContent {
     width: 100%;
     margin-top: 40px;
+  }
+
+  .footerSecondContentParent {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
   }
 
   .footer_secondContent {
